--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Nike</title>
-        <meta name="description" content="The best Nike shoe ever.">
+        <title>Adidas</title>
+        <meta name="description" content="The best Adidas shoe ever.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./style.css">
     </head>
