Starting the process

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
+        <section class="container">
+            <h1>Hello world!</h1>
+        </section>
         <!-- <script src="" async defer></script> -->
     </body>
 </html>
