--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <section class="container">
-            <h1>Hello Nana!</h1>
+            <h1>Hello</h1>
         </section>
         <!-- <script src="" async defer></script> -->
     </body>
