--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
             <div class="topnav">
                 <a href="https://www.nike.com/gb/">Home</a>
                 <input type="text" placeholder="Search..">
-              </div>
-            <h1>MAKE YOUR FIRST MOVE</h1>
+            </div>
+            <div class="title-holder">
+                <h1>MAKE YOUR FIRST MOVE</h1>
+            </div>
+
             <p>Start running with the right trainers</p>
         </section>
         <!-- <script src="" async defer></script> -->
