--- a/index.html
+++ b/index.html
@@ -10,15 +10,22 @@
     </head>
     <body>
         <section class="container">
-            <div class="topnav">
+            <nav>
                 <a href="https://www.nike.com/gb/">Home</a>
-                <input type="text" placeholder="Search..">
-            </div>
+                <input type="search" placeholder="Search.." aria-label="search in top right corner">
+            </nav>
             <div class="title-holder">
                 <h1>MAKE YOUR FIRST MOVE</h1>
             </div>
 
             <p>Start running with the right trainers</p>
+            <svg id = "svgelem" height = "258" xmlns = "http://www.w3.org/2000/svg">
+                <ellipse cx="125.014" cy="125.388" rx="121.5" ry="120.5" fill="#EFEFEF"/>
+            </svg>
+            <p>Nike Air Zoom Pegasus 37</p>
+            <div class="center">
+                <button class="button">Shop</button>
+            </div>    
         </section>
         <!-- <script src="" async defer></script> -->
     </body>
