centred stuff and made things round

--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
                 <ellipse cx="125.014" cy="125.388" rx="121.5" ry="120.5" fill="#EFEFEF"/>
             </svg>
             <p>Nike Air Zoom Pegasus 37</p>
-            <div class="center">
+
+            <div class="flex-center">
                 <button class="button">Shop</button>
-            </div>    
+            </div>
+            
         </section>
+
+        
         <!-- <script src="" async defer></script> -->
     </body>
 </html>
