potentially my final commit

--- a/index.html
+++ b/index.html
@@ -17,13 +17,27 @@
             <div class="title-holder">
                 <h1>MAKE YOUR FIRST MOVE</h1>
             </div>
-
-            <p>Start running with the right trainers</p>
-            <svg id = "svgelem" height = "258" xmlns = "http://www.w3.org/2000/svg">
-                <ellipse cx="125.014" cy="125.388" rx="121.5" ry="120.5" fill="#EFEFEF"/>
-            </svg>
-            <p>Nike Air Zoom Pegasus 37</p>
-            <div class="center">
+            <div class="shoes">
+                <div class="shoe-holder">
+                    <div class="circle">
+                        <img src="images/nike shoe.png" alt="Nike shoe.">
+                    </div>
+                </div>    
+                <div class="shoe-holder">
+                    <div class="circle">
+                        <img src="images/nike shoe.png" alt="Nike shoe.">
+                    </div>
+                </div>    
+                <div class="shoe-holder">
+                    <div class="circle">
+                        <img src="images/nike shoe.png" alt="Nike shoe.">
+                    </div>    
+                </div>
+            </div>  
+            <div class="shoe-name">
+                <p>Nike Air Zoom Pegasus 37</p>
+            </div>             
+            <div class="flex-center">
                 <button class="button">Shop</button>
             </div>    
         </section>
